start to play with styles.css change html minimally for styling move some header content in resumerBuilder.js

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <!--   load FontAwesome CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
+  <!-- google fonts CDN -->
+  <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Open+Sans" rel="stylesheet">
 
 
   <!--
@@ -46,9 +48,13 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     resume below. You can pretty easily figure out what each section will
     display by looking at the id or at what's written between the <h2> tags.
     -->
-    <div id="header" class="center-content clear-fix">
-      <ul id="topContacts" class="flex-box"></ul>
-    </div>
+    <section id="header-box">
+      <div id="header" class="center-content clear-fix">
+        <ul id="topContacts" class="flex-box"></ul>
+      </div>
+    </section>
+    <section id="pic">
+    </section>
     <div style="clear: both;"></div>
     <div id="workExperience" class="gray">
       <h2>Work Experience</h2>
